# Syn2Camera

./: CMakeLists.txt  PatternController_copy.ino  README.md
include/: config.hpp
source/: CMakeLists.txt  QuyTrinhDongBoHeThongBody3DCamera_v1.docx  capIRcut.cpp  capPatIRCut.cpp  capPattern.cpp  ircut.cpp  showCam.cpp  synSecond.cpp
src/: config (copy).cpp  man_config.cpp  showCam.cpp
